k8s-manifests/apps/banking-core-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: banking-core-service
  namespace: banking
  labels:
    app: banking-core-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: banking-core-service
  template:
    metadata:
      labels:
        app: banking-core-service
    spec:
      containers:
        - name: app
          image: nginx:1.27-alpine
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 20
