k8s-manifests/apps/banking-core-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: banking-core-service
  namespace: banking
spec:
  selector:
    app: banking-core-service
  ports:
    - port: 80
      targetPort: 80
