k8s-manifests/apps/banking-core-service/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: banking-core-service
  namespace: banking
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - banking.example.com
      secretName: banking-tls
  rules:
    - host: banking.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: banking-core-service
                port:
                  number: 80
